--- a/myblog/src/main/webapp/login.html
+++ b/myblog/src/main/webapp/login.html
@@ -46,17 +46,13 @@
 </div>
 <div style="margin-top: 100px;text-align: center;">
     <h1>登录功能</h1>
-    用户名：<input id="username" name="username" type="text" placeholder="请输入用户名">
+    用户名：<input id="username" name="username" type="text" placeholder="用户名:18220111862">
     <p></p>
-    密&nbsp;&nbsp;&nbsp;码：<input id="password" name="password" type="password" placeholder="请输入密码">
+    密&nbsp;&nbsp;&nbsp;码：<input id="password" name="password" type="password" placeholder="密码:sq000...">
     <p></p>
     <input type="button" onclick="mysub(1)" value=" 登 录 ">
     <input type="button" onclick="mysub(2)" value=" 清 空 ">
 
-    <div style="margin-top: 50px;margin-left: 500px">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;账号：18220111862<p></p>
-        密码：sq000...
-    </div>
 </div>
 
 </body>
