--- a/myblog/src/main/webapp/upart.html
+++ b/myblog/src/main/webapp/upart.html
@@ -55,6 +55,9 @@
     </script>
 </head>
 <body>
+<div style="margin-left: 2%;margin-top: 30px">
+    <a style="color: blue" href="myartlist.html"><strong>返回</strong></a>  &nbsp; &nbsp;
+</div>
 <div style="text-align: center;margin-top: 50px">
     <h1>文章修改</h1>
     标题：<input type = "text" id = "title"><p></p>
