--- a/myblog/src/main/webapp/addart.html
+++ b/myblog/src/main/webapp/addart.html
@@ -44,6 +44,9 @@
 
 </head>
 <body>
+<div style="margin-left: 2%;margin-top: 30px">
+    <a style="color: blue" href="myartlist.html"><strong>返回</strong></a>  &nbsp; &nbsp;
+</div>
 <div style="margin-top: 50px;text-align: center">
     <h1>添加文章</h1>
     标题：<input id="title" type="text">
