--- a/myblog/src/main/webapp/myartlist.html
+++ b/myblog/src/main/webapp/myartlist.html
@@ -93,6 +93,9 @@
     </script>
 </head>
 <body>
+<div style="margin-left: 2%;margin-top: 30px">
+    <a style="color: blue" href="login.html"><strong>返回</strong></a>  &nbsp; &nbsp;
+</div>
 <div style="margin-top: 50px;text-align: center;">
     <h1>我的文章列表</h1>
 
