--- a/myblog/src/main/webapp/navigation.html
+++ b/myblog/src/main/webapp/navigation.html
@@ -6,8 +6,7 @@
 </head>
 <body>
     <div style="margin-top: 150px;text-align: center">
-        <h1>导航页</h1><p></p>
-        <h2><strong><a href="list.html">首页</a> </strong></h2>
+        <h1><strong><a href="list.html">首页</a> </strong></h1><p></p>
         <h2><strong><a href="myblog.html">注册</a> </strong></h2>
         <h2><strong><a href="login.html">登录</a> </strong></h2>
 
